feat: add translations for signer related messages

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "Dein privater Schlüssel (nsec) sollte geheim gehalten werden. Jeder mit Zugriff darauf kann dein Konto kontrollieren.",
   "keepPrivateKeySecure": "Halte deinen privaten Schlüssel sicher",
   "privateKeyWarning": "Teile deinen privaten Schlüssel nicht öffentlich und verwende ihn nur zum Anmelden bei anderen Nostr-Apps.",
+  "nsecOnExternalSigner": "Privater Schlüssel ist im externen Signer gespeichert",
+  "nsecOnExternalSignerDescription": "Dein privater Schlüssel ist in White Noise nicht verfügbar. Öffne deinen Signer, um ihn anzusehen oder zu verwalten.",
   "editProfileTitle": "Profil bearbeiten",
   "profileName": "Profilname",
   "nostrAddress": "Nostr-Adresse",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Fehler beim Laden des Profils: {error}",
   "error": "Fehler: {error}",
   "profileLoadError": "Profil konnte nicht geladen werden. Bitte versuchen Sie es erneut.",
+  "failedToLoadPrivateKey": "Privater Schlüssel konnte nicht geladen werden. Bitte versuchen Sie es erneut.",
   "profileSaveError": "Profil konnte nicht gespeichert werden. Bitte versuchen Sie es erneut.",
   "networkRelaysTitle": "Netzwerk-Relays",
   "myRelays": "Meine Relays",
@@ -76,7 +79,8 @@
   "scanToConnect": "Zum Verbinden scannen",
   "signOutTitle": "Abmelden",
   "signOutConfirmation": "Möchtest du dich wirklich abmelden?",
-  "signOutWarning": "Wenn du dich bei White Noise abmeldest, werden deine Chats von diesem Gerät gelöscht und können auf einem anderen Gerät nicht wiederhergestellt werden.\n\nWenn du deinen privaten Schlüssel nicht gesichert hast, kannst du dieses Profil bei keinem anderen Nostr-Dienst verwenden.",
+  "signOutWarning": "Wenn du dich bei White Noise abmeldest, werden deine Chats von diesem Gerät gelöscht und können auf einem anderen Gerät nicht wiederhergestellt werden.",
+  "signOutWarningBackupKey": "Wenn du deinen privaten Schlüssel nicht gesichert hast, kannst du dieses Profil bei keinem anderen Nostr-Dienst verwenden.",
   "backUpPrivateKey": "Privaten Schlüssel sichern",
   "copyPrivateKeyHint": "Kopiere deinen privaten Schlüssel, um dein Konto auf einem anderen Gerät wiederherzustellen.",
   "publicKeyCopyError": "Öffentlicher Schlüssel konnte nicht kopiert werden. Bitte erneut versuchen.",
@@ -171,9 +175,20 @@
   "monthNovShort": "Nov",
   "monthDecShort": "Dez",
   "loginWithSigner": "Mit Signer anmelden",
-  "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "you": "Du",
   "search": "Suche",
   "filterChats": "Chats",
-  "filterArchive": "Archiv"
+  "filterArchive": "Archiv",
+  "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuch es erneut.",
+  "signerErrorUserRejected": "Anmeldung abgebrochen",
+  "signerErrorNotConnected": "Nicht mit dem Signer verbunden. Bitte versuch es erneut.",
+  "signerErrorNoSigner": "Keine Signer-App gefunden. Bitte installiere einen NIP-55-kompatiblen Signer.",
+  "signerErrorNoResponse": "Keine Antwort vom Signer. Bitte versuch es erneut.",
+  "signerErrorNoPubkey": "Öffentlicher Schlüssel konnte nicht vom Signer abgerufen werden.",
+  "signerErrorNoResult": "Der Signer hat kein Ergebnis zurückgegeben.",
+  "signerErrorNoEvent": "Der Signer hat kein signiertes Event zurückgegeben.",
+  "signerErrorRequestInProgress": "Eine andere Anfrage wird gerade bearbeitet. Warte bitte.",
+  "signerErrorNoActivity": "Signer konnte nicht gestartet werden. Bitte versuch es erneut.",
+  "signerErrorLaunchError": "Signer-App konnte nicht gestartet werden.",
+  "signerErrorUnknown": "Ein Fehler ist beim Signer aufgetreten. Bitte versuch es erneut."
 }
