--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "Tu llave privada (nsec) debe mantenerse en secreto. Cualquiera con acceso a ella puede controlar tu cuenta.",
   "keepPrivateKeySecure": "Mantén tu llave privada segura",
   "privateKeyWarning": "No compartas tu llave privada públicamente y úsala solo para iniciar sesión en otros servicios de Nostr.",
+  "nsecOnExternalSigner": "La llave privada está almacenada en un firmante externo",
+  "nsecOnExternalSignerDescription": "Tu llave privada no está disponible en White Noise. Abre tu firmante para verla o gestionarla.",
   "editProfileTitle": "Editar perfil",
   "profileName": "Nombre del perfil",
   "nostrAddress": "Dirección Nostr",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Error al cargar el perfil: {error}",
   "error": "Error: {error}",
   "profileLoadError": "No se pudo cargar el perfil. Por favor, inténtelo de nuevo.",
+  "failedToLoadPrivateKey": "No se pudo cargar la llave privada. Por favor, inténtelo de nuevo.",
   "profileSaveError": "No se pudo guardar el perfil. Por favor, inténtelo de nuevo.",
   "networkRelaysTitle": "Relés de Red",
   "myRelays": "Mis Relés",
@@ -76,7 +79,8 @@
   "scanToConnect": "Escanear para conectar",
   "signOutTitle": "Cerrar sesión",
   "signOutConfirmation": "¿Estás seguro de que quieres cerrar sesión?",
-  "signOutWarning": "Cuando cierres sesión en White Noise, tus chats se eliminarán de este dispositivo y no podrán restaurarse en otro dispositivo.\n\nSi no has respaldado tu llave privada, no podrás usar este perfil en ningún otro servicio Nostr.",
+  "signOutWarning": "Cuando cierres sesión en White Noise, tus chats se eliminarán de este dispositivo y no podrán restaurarse en otro dispositivo.",
+  "signOutWarningBackupKey": "Si no has respaldado tu llave privada, no podrás usar este perfil en ningún otro servicio Nostr.",
   "backUpPrivateKey": "Respalda tu llave privada",
   "copyPrivateKeyHint": "Copia tu llave privada para restaurar tu cuenta en otro dispositivo.",
   "publicKeyCopyError": "Error al copiar la llave pública. Por favor, inténtalo de nuevo.",
@@ -141,12 +145,12 @@
   "failedToUpdateFollow": "Error al actualizar el estado de seguimiento. Por favor, inténtalo de nuevo.",
   "imagePickerError": "Error al seleccionar imagen. Por favor, inténtalo de nuevo.",
   "scanNsec": "Escanear código QR",
-  "scanNsecHint": "Escanea el código QR de tu clave privada para iniciar sesión.",
+  "scanNsecHint": "Escanea el código QR de tu llave privada para iniciar sesión.",
   "cameraPermissionDenied": "Permiso de cámara denegado",
   "somethingWentWrong": "Algo salió mal",
 "scanNpub": "Escanear código QR",
   "scanNpubHint": "Escanea el código QR de un contacto.",
-  "invalidNpub": "Clave pública inválida. Por favor, inténtalo de nuevo.",
+  "invalidNpub": "Llave pública inválida. Por favor, inténtalo de nuevo.",
   "timestampNow": "Ahora",
   "timestampMinutes": "{count}m",
   "timestampHours": "{count}h",
@@ -170,10 +174,21 @@
   "monthOctShort": "Oct",
   "monthNovShort": "Nov",
   "monthDecShort": "Dic",
-  "loginWithSigner": "Iniciar sesión con Signer",
-  "signerConnectionError": "No se pudo conectar al signer. Por favor, inténtalo de nuevo.",
   "you": "Tú",
   "search": "Buscar",
   "filterChats": "Chats",
-  "filterArchive": "Archivados"
+  "filterArchive": "Archivados",
+  "loginWithSigner": "Iniciar sesión con Signer",
+  "signerConnectionError": "No se pudo conectar al signer. Por favor, inténtalo de nuevo.",
+  "signerErrorUserRejected": "Inicio de sesión cancelado",
+  "signerErrorNotConnected": "No conectado al signer. Por favor, inténtalo de nuevo.",
+  "signerErrorNoSigner": "No se encontró ninguna app de signer. Instala un signer compatible con NIP-55.",
+  "signerErrorNoResponse": "El signer no respondió. Por favor, inténtalo de nuevo.",
+  "signerErrorNoPubkey": "No se pudo obtener la llave pública del signer.",
+  "signerErrorNoResult": "El signer no devolvió un resultado.",
+  "signerErrorNoEvent": "El signer no devolvió un evento firmado.",
+  "signerErrorRequestInProgress": "Hay otra solicitud en curso. Por favor, espera.",
+  "signerErrorNoActivity": "No se pudo abrir el signer. Por favor, inténtalo de nuevo.",
+  "signerErrorLaunchError": "Error al abrir la app del signer.",
+  "signerErrorUnknown": "Ocurrió un error con el signer. Por favor, inténtalo de nuevo."
 }
