--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "Votre clé privée (nsec) doit rester secrète. Toute personne y ayant accès peut contrôler votre compte.",
   "keepPrivateKeySecure": "Gardez votre clé privée en sécurité",
   "privateKeyWarning": "Ne partagez pas votre clé privée publiquement et utilisez-la uniquement pour vous connecter à d'autres apps Nostr.",
+  "nsecOnExternalSigner": "La clé privée est stockée dans un signataire externe",
+  "nsecOnExternalSignerDescription": "Votre clé privée n'est pas disponible dans White Noise. Ouvrez votre signataire pour la consulter ou la gérer.",
   "editProfileTitle": "Modifier le profil",
   "profileName": "Nom du profil",
   "nostrAddress": "Adresse Nostr",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Erreur lors du chargement du profil : {error}",
   "error": "Erreur : {error}",
   "profileLoadError": "Impossible de charger le profil. Veuillez réessayer.",
+  "failedToLoadPrivateKey": "Impossible de charger la clé privée. Veuillez réessayer.",
   "profileSaveError": "Impossible d'enregistrer le profil. Veuillez réessayer.",
   "networkRelaysTitle": "Relais Réseau",
   "myRelays": "Mes Relais",
@@ -76,7 +79,8 @@
   "scanToConnect": "Scanner pour se connecter",
   "signOutTitle": "Déconnexion",
   "signOutConfirmation": "Êtes-vous sûr de vouloir vous déconnecter ?",
-  "signOutWarning": "Lorsque vous vous déconnectez de White Noise, vos discussions seront supprimées de cet appareil et ne pourront pas être restaurées sur un autre appareil.\n\nSi vous n'avez pas sauvegardé votre clé privée, vous ne pourrez pas utiliser ce profil sur un autre service Nostr.",
+  "signOutWarning": "Lorsque vous vous déconnectez de White Noise, vos discussions seront supprimées de cet appareil et ne pourront pas être restaurées sur un autre appareil.",
+  "signOutWarningBackupKey": "Si vous n'avez pas sauvegardé votre clé privée, vous ne pourrez pas utiliser ce profil sur un autre service Nostr.",
   "backUpPrivateKey": "Sauvegardez votre clé privée",
   "copyPrivateKeyHint": "Copiez votre clé privée pour restaurer votre compte sur un autre appareil.",
   "publicKeyCopyError": "Échec de la copie de la clé publique. Veuillez réessayer.",
@@ -170,10 +174,21 @@
   "monthOctShort": "Oct",
   "monthNovShort": "Nov",
   "monthDecShort": "Déc",
-  "loginWithSigner": "Se connecter avec Signer",
-  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer.",
   "you": "Vous",
   "search": "Rechercher",
   "filterChats": "Discussions",
-  "filterArchive": "Archives"
+  "filterArchive": "Archives",
+  "loginWithSigner": "Se connecter avec Signer",
+  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer.",
+  "signerErrorUserRejected": "Connexion annulée",
+  "signerErrorNotConnected": "Non connecté au signer. Veuillez réessayer.",
+  "signerErrorNoSigner": "Aucune application signer trouvée. Veuillez installer un signer compatible NIP-55.",
+  "signerErrorNoResponse": "Aucune réponse du signer. Veuillez réessayer.",
+  "signerErrorNoPubkey": "Impossible d'obtenir la clé publique du signer.",
+  "signerErrorNoResult": "Le signer n'a renvoyé aucun résultat.",
+  "signerErrorNoEvent": "Le signer n'a renvoyé aucun événement signé.",
+  "signerErrorRequestInProgress": "Une autre requête est en cours. Veuillez patienter.",
+  "signerErrorNoActivity": "Impossible de lancer le signer. Veuillez réessayer.",
+  "signerErrorLaunchError": "Échec du lancement de l'application signer.",
+  "signerErrorUnknown": "Une erreur s'est produite avec le signer. Veuillez réessayer."
 }
