--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "Sua chave privada (nsec) deve ser mantida em segredo. Qualquer pessoa com acesso a ela pode controlar sua conta.",
   "keepPrivateKeySecure": "Mantenha sua chave privada segura",
   "privateKeyWarning": "Não compartilhe sua chave privada publicamente e use-a apenas para entrar em outros apps Nostr.",
+  "nsecOnExternalSigner": "A chave privada está armazenada em um assinador externo",
+  "nsecOnExternalSignerDescription": "Sua chave privada não está disponível no White Noise. Abra seu assinador para visualizá-la ou gerenciá-la.",
   "editProfileTitle": "Editar perfil",
   "profileName": "Nome do perfil",
   "nostrAddress": "Endereço Nostr",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Erro ao carregar o perfil: {error}",
   "error": "Erro: {error}",
   "profileLoadError": "Não foi possível carregar o perfil. Por favor, tente novamente.",
+  "failedToLoadPrivateKey": "Não foi possível carregar a chave privada. Por favor, tente novamente.",
   "profileSaveError": "Não foi possível salvar o perfil. Por favor, tente novamente.",
   "networkRelaysTitle": "Relays de Rede",
   "myRelays": "Meus Relays",
@@ -76,7 +79,8 @@
   "scanToConnect": "Escaneie para conectar",
   "signOutTitle": "Sair",
   "signOutConfirmation": "Tem certeza de que deseja sair?",
-  "signOutWarning": "Quando você sair do White Noise, suas conversas serão excluídas deste dispositivo e não poderão ser restauradas em outro dispositivo.\n\nSe você não fez backup da sua chave privada, não poderá usar este perfil em nenhum outro serviço Nostr.",
+  "signOutWarning": "Quando você sair do White Noise, suas conversas serão excluídas deste dispositivo e não poderão ser restauradas em outro dispositivo.",
+  "signOutWarningBackupKey": "Se você não fez backup da sua chave privada, não poderá usar este perfil em nenhum outro serviço Nostr.",
   "backUpPrivateKey": "Faça backup da sua chave privada",
   "copyPrivateKeyHint": "Copie sua chave privada para restaurar sua conta em outro dispositivo.",
   "publicKeyCopyError": "Falha ao copiar a chave pública. Por favor, tente novamente.",
@@ -170,10 +174,21 @@
   "monthOctShort": "Out",
   "monthNovShort": "Nov",
   "monthDecShort": "Dez",
-  "loginWithSigner": "Entrar com Signer",
-  "signerConnectionError": "Não foi possível conectar ao signer. Por favor, tente novamente.",
   "you": "Você",
   "search": "Pesquisar",
   "filterChats": "Conversas",
-  "filterArchive": "Arquivo"
+  "filterArchive": "Arquivo",
+  "loginWithSigner": "Entrar com Signer",
+  "signerConnectionError": "Não foi possível conectar ao signer. Por favor, tente novamente.",
+  "signerErrorUserRejected": "Login cancelado",
+  "signerErrorNotConnected": "Não conectado ao signer. Por favor, tente novamente.",
+  "signerErrorNoSigner": "Nenhum app de signer encontrado. Instale um signer compatível com NIP-55.",
+  "signerErrorNoResponse": "Sem resposta do signer. Por favor, tente novamente.",
+  "signerErrorNoPubkey": "Não foi possível obter a chave pública do signer.",
+  "signerErrorNoResult": "O signer não retornou um resultado.",
+  "signerErrorNoEvent": "O signer não retornou um evento assinado.",
+  "signerErrorRequestInProgress": "Outra solicitação em andamento. Por favor, aguarde.",
+  "signerErrorNoActivity": "Não foi possível iniciar o signer. Por favor, tente novamente.",
+  "signerErrorLaunchError": "Falha ao iniciar o app do signer.",
+  "signerErrorUnknown": "Ocorreu um erro com o signer. Por favor, tente novamente."
 }
