--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "Ваш приватный ключ (nsec) должен оставаться секретным. Любой, кто имеет к нему доступ, может контролировать ваш аккаунт.",
   "keepPrivateKeySecure": "Храните приватный ключ в безопасности",
   "privateKeyWarning": "Не делитесь приватным ключом публично и используйте его только для входа в другие приложения Nostr.",
+  "nsecOnExternalSigner": "Закрытый ключ хранится во внешнем приложении",
+  "nsecOnExternalSignerDescription": "Ваш закрытый ключ недоступен в White Noise. Откройте ваше приложение для подписи, чтобы просмотреть или управлять им.",
   "editProfileTitle": "Редактировать профиль",
   "profileName": "Имя профиля",
   "nostrAddress": "Адрес Nostr",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Ошибка загрузки профиля: {error}",
   "error": "Ошибка: {error}",
   "profileLoadError": "Не удалось загрузить профиль. Пожалуйста, попробуйте снова.",
+  "failedToLoadPrivateKey": "Не удалось загрузить приватный ключ. Пожалуйста, попробуйте снова.",
   "profileSaveError": "Не удалось сохранить профиль. Пожалуйста, попробуйте снова.",
   "networkRelaysTitle": "Сетевые Реле",
   "myRelays": "Мои Реле",
@@ -76,7 +79,8 @@
   "scanToConnect": "Сканируйте для подключения",
   "signOutTitle": "Выход",
   "signOutConfirmation": "Вы уверены, что хотите выйти?",
-  "signOutWarning": "Когда вы выходите из White Noise, ваши чаты будут удалены с этого устройства и не могут быть восстановлены на другом устройстве.\n\nЕсли вы не сделали резервную копию приватного ключа, вы не сможете использовать этот профиль в любом другом сервисе Nostr.",
+  "signOutWarning": "Когда вы выходите из White Noise, ваши чаты будут удалены с этого устройства и не могут быть восстановлены на другом устройстве.",
+  "signOutWarningBackupKey": "Если вы не сделали резервную копию приватного ключа, вы не сможете использовать этот профиль в любом другом сервисе Nostr.",
   "backUpPrivateKey": "Сделайте резервную копию приватного ключа",
   "copyPrivateKeyHint": "Скопируйте приватный ключ для восстановления аккаунта на другом устройстве.",
   "publicKeyCopyError": "Не удалось скопировать публичный ключ. Попробуйте снова.",
@@ -175,5 +179,16 @@
   "you": "Вы",
   "search": "Поиск",
   "filterChats": "Чаты",
-  "filterArchive": "Архив"
+  "filterArchive": "Архив",
+  "signerErrorUserRejected": "Вход отменён",
+  "signerErrorNotConnected": "Нет подключения к signer. Попробуйте снова.",
+  "signerErrorNoSigner": "Приложение signer не найдено. Установите совместимый с NIP-55 signer.",
+  "signerErrorNoResponse": "Нет ответа от signer. Попробуйте снова.",
+  "signerErrorNoPubkey": "Не удалось получить публичный ключ от signer.",
+  "signerErrorNoResult": "Signer не вернул результат.",
+  "signerErrorNoEvent": "Signer не вернул подписанное событие.",
+  "signerErrorRequestInProgress": "Выполняется другой запрос. Подождите.",
+  "signerErrorNoActivity": "Не удалось запустить signer. Попробуйте снова.",
+  "signerErrorLaunchError": "Не удалось запустить приложение signer.",
+  "signerErrorUnknown": "Произошла ошибка с signer. Попробуйте снова."
 }
