--- a/lib/l10n/app_tr.arb
+++ b/lib/l10n/app_tr.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "Özel anahtarınız (nsec) gizli tutulmalıdır. Erişimi olan herkes hesabınızı kontrol edebilir.",
   "keepPrivateKeySecure": "Özel anahtarınızı güvende tutun",
   "privateKeyWarning": "Özel anahtarınızı herkese açık paylaşmayın ve yalnızca diğer Nostr uygulamalarına giriş yapmak için kullanın.",
+  "nsecOnExternalSigner": "Özel anahtar harici bir imzalayıcıda saklanıyor",
+  "nsecOnExternalSignerDescription": "Özel anahtarınız White Noise'da mevcut değil. Görüntülemek veya yönetmek için imzalayıcınızı açın.",
   "editProfileTitle": "Profili düzenle",
   "profileName": "Profil adı",
   "nostrAddress": "Nostr adresi",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Profil yüklenirken hata: {error}",
   "error": "Hata: {error}",
   "profileLoadError": "Profil yüklenemedi. Lütfen tekrar deneyin.",
+  "failedToLoadPrivateKey": "Özel anahtar yüklenemedi. Lütfen tekrar deneyin.",
   "profileSaveError": "Profil kaydedilemedi. Lütfen tekrar deneyin.",
   "networkRelaysTitle": "Ağ Röleleri",
   "myRelays": "Rölelerim",
@@ -76,7 +79,8 @@
   "scanToConnect": "Bağlanmak için tarayın",
   "signOutTitle": "Çıkış yap",
   "signOutConfirmation": "Çıkış yapmak istediğinizden emin misiniz?",
-  "signOutWarning": "White Noise'dan çıkış yaptığınızda, sohbetleriniz bu cihazdan silinecek ve başka bir cihazda geri yüklenemeyecektir.\n\nÖzel anahtarınızı yedeklemediyseniz, bu profili başka hiçbir Nostr hizmetinde kullanamazsınız.",
+  "signOutWarning": "White Noise'dan çıkış yaptığınızda, sohbetleriniz bu cihazdan silinecek ve başka bir cihazda geri yüklenemeyecektir.",
+  "signOutWarningBackupKey": "Özel anahtarınızı yedeklemediyseniz, bu profili başka hiçbir Nostr hizmetinde kullanamazsınız.",
   "backUpPrivateKey": "Özel anahtarınızı yedekleyin",
   "copyPrivateKeyHint": "Hesabınızı başka bir cihazda geri yüklemek için özel anahtarınızı kopyalayın.",
   "publicKeyCopyError": "Açık anahtar kopyalanamadı. Lütfen tekrar deneyin.",
@@ -175,5 +179,16 @@
   "you": "Sen",
   "search": "Ara",
   "filterChats": "Sohbetler",
-  "filterArchive": "Arşiv"
+  "filterArchive": "Arşiv",
+  "signerErrorUserRejected": "Giriş iptal edildi",
+  "signerErrorNotConnected": "Signer'a bağlı değil. Lütfen tekrar deneyin.",
+  "signerErrorNoSigner": "Signer uygulaması bulunamadı. NIP-55 uyumlu bir signer yükleyin.",
+  "signerErrorNoResponse": "Signer'dan yanıt alınamadı. Lütfen tekrar deneyin.",
+  "signerErrorNoPubkey": "Signer'dan ortak anahtar alınamadı.",
+  "signerErrorNoResult": "Signer sonuç döndürmedi.",
+  "signerErrorNoEvent": "Signer imzalı etkinlik döndürmedi.",
+  "signerErrorRequestInProgress": "Başka bir istek işleniyor. Lütfen bekleyin.",
+  "signerErrorNoActivity": "Signer başlatılamadı. Lütfen tekrar deneyin.",
+  "signerErrorLaunchError": "Signer uygulaması başlatılamadı.",
+  "signerErrorUnknown": "Signer ile bir hata oluştu. Lütfen tekrar deneyin."
 }
