--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -43,6 +43,8 @@
   "privateKeyDescription": "La tua chiave privata (nsec) deve rimanere segreta. Chiunque vi abbia accesso può controllare il tuo account.",
   "keepPrivateKeySecure": "Mantieni la tua chiave privata al sicuro",
   "privateKeyWarning": "Non condividere la tua chiave privata pubblicamente e usala solo per accedere ad altre app Nostr.",
+  "nsecOnExternalSigner": "La chiave privata è archiviata in un signer esterno",
+  "nsecOnExternalSignerDescription": "La tua chiave privata non è disponibile in White Noise. Apri il tuo signer per visualizzarla o gestirla.",
   "editProfileTitle": "Modifica profilo",
   "profileName": "Nome profilo",
   "nostrAddress": "Indirizzo Nostr",
@@ -57,6 +59,7 @@
   "errorLoadingProfile": "Errore nel caricamento del profilo: {error}",
   "error": "Errore: {error}",
   "profileLoadError": "Impossibile caricare il profilo. Riprova.",
+  "failedToLoadPrivateKey": "Impossibile caricare la chiave privata. Riprova.",
   "profileSaveError": "Impossibile salvare il profilo. Riprova.",
   "networkRelaysTitle": "Relay di Rete",
   "myRelays": "I Miei Relay",
@@ -76,7 +79,8 @@
   "scanToConnect": "Scansiona per connetterti",
   "signOutTitle": "Esci",
   "signOutConfirmation": "Sei sicuro di voler uscire?",
-  "signOutWarning": "Quando esci da White Noise, le tue chat verranno eliminate da questo dispositivo e non potranno essere ripristinate su un altro dispositivo.\n\nSe non hai fatto il backup della tua chiave privata, non potrai usare questo profilo su nessun altro servizio Nostr.",
+  "signOutWarning": "Quando esci da White Noise, le tue chat verranno eliminate da questo dispositivo e non potranno essere ripristinate su un altro dispositivo.",
+  "signOutWarningBackupKey": "Se non hai fatto il backup della tua chiave privata, non potrai usare questo profilo su nessun altro servizio Nostr.",
   "backUpPrivateKey": "Fai il backup della tua chiave privata",
   "copyPrivateKeyHint": "Copia la tua chiave privata per ripristinare il tuo account su un altro dispositivo.",
   "publicKeyCopyError": "Copia della chiave pubblica fallita. Riprova.",
@@ -170,10 +174,21 @@
   "monthOctShort": "Ott",
   "monthNovShort": "Nov",
   "monthDecShort": "Dic",
-  "loginWithSigner": "Accedi con Signer",
-  "signerConnectionError": "Impossibile connettersi al signer. Riprova.",
   "you": "Tu",
   "search": "Cerca",
   "filterChats": "Chat",
-  "filterArchive": "Archivio"
+  "filterArchive": "Archivio",
+  "loginWithSigner": "Accedi con Signer",
+  "signerConnectionError": "Impossibile connettersi al signer. Riprova.",
+  "signerErrorUserRejected": "Accesso annullato",
+  "signerErrorNotConnected": "Non connesso al signer. Riprova.",
+  "signerErrorNoSigner": "Nessuna app signer trovata. Installa un signer compatibile con NIP-55.",
+  "signerErrorNoResponse": "Nessuna risposta dal signer. Riprova.",
+  "signerErrorNoPubkey": "Impossibile ottenere la chiave pubblica dal signer.",
+  "signerErrorNoResult": "Il signer non ha restituito un risultato.",
+  "signerErrorNoEvent": "Il signer non ha restituito un evento firmato.",
+  "signerErrorRequestInProgress": "Un'altra richiesta è in corso. Attendi.",
+  "signerErrorNoActivity": "Impossibile avviare il signer. Riprova.",
+  "signerErrorLaunchError": "Avvio dell'app signer non riuscito.",
+  "signerErrorUnknown": "Si è verificato un errore con il signer. Riprova."
 }
