fix: translate l10n strings, remove unused isTyping param, fix test pubkeys
- Translate search/filterChats/filterArchive into de/es/fr/it/pt/ru/tr
- Remove unused isTyping parameter from WnChatListItem
- Use valid 64-char hex pubkeys in chat_list_tile tests
- Remove unnecessary comments from ChatListTile

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -173,7 +173,7 @@
   "loginWithSigner": "Mit Signer anmelden",
   "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "you": "Du",
-  "search": "Search",
+  "search": "Suche",
   "filterChats": "Chats",
-  "filterArchive": "Archive"
+  "filterArchive": "Archiv"
 }
