--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -173,7 +173,7 @@
   "loginWithSigner": "Se connecter avec Signer",
   "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer.",
   "you": "Vous",
-  "search": "Search",
-  "filterChats": "Chats",
-  "filterArchive": "Archive"
+  "search": "Rechercher",
+  "filterChats": "Discussions",
+  "filterArchive": "Archives"
 }
