feat(chat-list): add pull-to-reveal search and filters header (#195)
* feat: Add WnChatListItem and refactor ChatListTile to use it

- Create WnChatListItem widget matching Figma specs
- Refactor ChatListTile to use WnChatListItem
- Add "you" localization key
- Add tests for WnChatListItem and update ChatListTile tests
- Update test_helpers to support provider overrides

* fix(widgets): improve WnChatListItem design to match Figma

- Use medium14Compact typography for message preview (was medium14)
- Support 2-line message preview with ellipsis truncation
- Center status icon vertically relative to message text
- Add colored status icons: red for failed, blue for request
- Add widgetbook showcase with 'Is From You' knob
- Add two-line message examples to widgetbook
- Wrap widgetbook in DesignWidthContainer (390px)

* feat(widgets): add WnChatList container with scroll edge effect

Extract reusable WnChatList widget from ChatListScreen that handles
loading, empty, and list states. The chat list extends full-screen
behind the WnSlate header using a Stack layout, with a scroll-aware
gradient fade effect at the top so items visually dissolve as they
scroll up behind the slate and into the status bar area.

* feat(chat-list): add pull-to-reveal search and filters header

Add search/filter bar that slides down from behind the slate when
pulling down on the chat list. The header commits to open once the
user drags past 50% and dismisses when scrolling up. Includes
WnSearchAndFilters widget with search field and filter chips.

Closes #148

* add scroll animations for chat list

* fix(test): address PR review feedback and improve widget test coverage

- Rename misleading test description to 'renders chat status widget when status is provided'
- Remove weak 'renders selected state background' test that asserted nothing meaningful
- Add test for pending group with name to cover chat_list_tile.dart avatarName path
- Clean up unnecessary comments in wn_chat_list_item_test.dart



--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -171,5 +171,9 @@
   "monthNovShort": "Nov",
   "monthDecShort": "Dez",
   "loginWithSigner": "Mit Signer anmelden",
-  "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut."
+  "signerConnectionError": "Verbindung zum Signer fehlgeschlagen. Bitte versuchen Sie es erneut.",
+  "you": "Du",
+  "search": "Suche",
+  "filterChats": "Chats",
+  "filterArchive": "Archiv"
 }
