--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -171,5 +171,9 @@
   "monthNovShort": "Nov",
   "monthDecShort": "Déc",
   "loginWithSigner": "Se connecter avec Signer",
-  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer."
+  "signerConnectionError": "Impossible de se connecter au signer. Veuillez réessayer.",
+  "you": "Vous",
+  "search": "Rechercher",
+  "filterChats": "Discussions",
+  "filterArchive": "Archives"
 }
