--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -171,5 +171,9 @@
   "monthNovShort": "Nov",
   "monthDecShort": "Dez",
   "loginWithSigner": "Entrar com Signer",
-  "signerConnectionError": "Não foi possível conectar ao signer. Por favor, tente novamente."
+  "signerConnectionError": "Não foi possível conectar ao signer. Por favor, tente novamente.",
+  "you": "Você",
+  "search": "Pesquisar",
+  "filterChats": "Conversas",
+  "filterArchive": "Arquivo"
 }
