--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -171,5 +171,9 @@
   "monthNovShort": "Ноя",
   "monthDecShort": "Дек",
   "loginWithSigner": "Войти через Signer",
-  "signerConnectionError": "Не удалось подключиться к signer. Попробуйте снова."
+  "signerConnectionError": "Не удалось подключиться к signer. Попробуйте снова.",
+  "you": "Вы",
+  "search": "Поиск",
+  "filterChats": "Чаты",
+  "filterArchive": "Архив"
 }
